@@ -1,6 +1,9 @@
 Revision history for Catalyst-ResponseHelpers
 
 {{$NEXT}}
+        - Use 204 No Content when no message is provided to Ok().  204 No
+          Content is more accurate and also means that that commonly-used
+          Catalyst::Action::RenderView won't interfere.
 
 1.00  2016-06-14 10:00:50 PDT
         - Initial release
